fixed transition animation from being too high

--- a/styles.css
+++ b/styles.css
@@ -41,9 +41,8 @@ a {
     font-weight: 900;
     font-size: 20px;
     display: block;
-    padding-top: 8px;
     transition: all 0.5s;
-    transform: translateY(-3.4rem);
+    transform: translateY(-2.6rem);
 }
 
 .form {
